# Blunder-Psychologist

./: .dockerignore  .env.example  .gitignore  DESIGN.md  EXECUTION_PLAN.md  PHASE_0_SUMMARY.md  README.md  compose.yaml
.github/workflows/: ci.yml
core/: alembic.ini  pyproject.toml
core/alembic/: env.py
core/alembic/versions/: 0001_initial.py  0002_opening_cache.py  0003_embeddings.py  0004_best_pv.py
core/blunder/: annotate_flow.py  annotation.py  api.py  book.py  config.py  db.py  deep.py  embed.py  engine.py  featurediff.py  flows.py  funnel.py  handlers.py  ingest.py  jobs.py  lichess.py  llm.py  manage.py  models.py  queue.py  retrieval.py  sampler.py  services.py  worker.py
core/blunder/motifs/: __init__.py  positional.py  tactical.py  vocab.py
core/tests/: conftest.py  test_annotate_db.py  test_annotate_flow.py  test_annotation.py  test_api.py  test_book.py  test_deep_params.py  test_engine.py  test_featurediff.py  test_funnel.py  test_ingest.py  test_integration.py  test_lichess.py  test_positional.py  test_queue.py  test_retrieval.py  test_sampler.py  test_tactical.py
core/tests/fixtures/: tactical_fixtures.json  user_games.ndjson
docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
engine/: CMakeLists.txt  README.md  pyproject.toml
engine/bindings/: module.cpp
engine/include/: placeholder.hpp
engine/include/blunder/: analysis.hpp  archetype.hpp  engine_pool.hpp  features.hpp  pawns.hpp  score.hpp  severity.hpp  uci_engine.hpp
engine/src/: annotate.cpp  archetype.cpp  engine_pool.cpp  features.cpp  pawns.cpp  placeholder.cpp  serialize.cpp  uci_engine.cpp
engine/tests/: smoke_wheel.py  test_annotate.cpp  test_archetypes.cpp  test_engine.cpp  test_features.cpp  test_pawns.cpp  test_score.cpp  test_severity.cpp
web/: index.html  package.json
web/src/: App.tsx
